--- a/welcome.html
+++ b/welcome.html
@@ -73,7 +73,7 @@
                 <h1 class="display-4 pt-md-4 pt-0 bannerHeading"> 
                   <span class="Mcewan">Mcewan </span> 
                   <span class="Advisory">Advisory </span> 
-                  <span class="Group">Group </span> 
+                  <!-- <span class="Group">Group </span>  -->
                 </h1>
               </div>
               <div class="col-12">
